Bug 151694 - Modern IDB: storage/indexeddb/basics.html fails
Summary: Modern IDB: storage/indexeddb/basics.html fails
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 150882
  Show dependency treegraph
 
Reported: 2015-11-30 22:24 PST by Brady Eidson
Modified: 2015-12-01 10:31 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (11.08 KB, patch)
2015-11-30 22:29 PST, Brady Eidson
achristensen: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2015-11-30 22:24:27 PST
Modern IDB: storage/indexeddb/basics.html fails

There's 3 small reasons why that will be evident in the upcoming patch.
Comment 1 Brady Eidson 2015-11-30 22:29:56 PST
Created attachment 266336 [details]
Patch v1
Comment 2 Alex Christensen 2015-12-01 10:25:42 PST
Comment on attachment 266336 [details]
Patch v1

yay!
Comment 3 Brady Eidson 2015-12-01 10:31:05 PST
https://trac.webkit.org/changeset/192890