Modern IDB: storage/indexeddb/basics.html fails. https://bugs.webkit.org/show_bug.cgi?id=151694

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes, and covered by changes to 3 previously incorrect tests).

* Modules/indexeddb/client/IDBOpenDBRequestImpl.cpp:
(WebCore::IDBClient::IDBOpenDBRequest::versionChangeTransactionWillFinish): Set the flag determining whether
  or not the request's transaction should be exposed to the DOM.
* Modules/indexeddb/client/IDBOpenDBRequestImpl.h:

* Modules/indexeddb/client/IDBRequestImpl.cpp:
(WebCore::IDBClient::IDBRequest::result): Throw an exception if the request is not done.
(WebCore::IDBClient::IDBRequest::error): Ditto.
(WebCore::IDBClient::IDBRequest::transaction): Only return the transaction to the DOM if the flag says so.
* Modules/indexeddb/client/IDBRequestImpl.h:

* Modules/indexeddb/client/IDBTransactionImpl.cpp:
(WebCore::IDBClient::IDBTransaction::abort):
(WebCore::IDBClient::IDBTransaction::commit):

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/modern/deletedatabase-1.html:
* storage/indexeddb/modern/opendatabase-versions.html:
* storage/indexeddb/modern/versionchange-event.html:

Canonical link: https://commits.webkit.org/169840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192890 268f45cc-cd09-0410-ab3c-d52691b4dbfc